--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "js-cookie": "^3.0.5",
+    "lightgallery": "^2.8.2",
+    "mdb-react-ui-kit": "^9.0.0",
     "react": "^18.3.1",
     "react-autosuggest": "^10.1.0",
     "react-bootstrap": "^2.10.4",
     "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
+    "react-grid-gallery": "^1.0.1",
     "react-icons": "^5.3.0",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.26.2",
@@ -51,5 +54,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.0"
   }
 }
